source/css/core/power_ui_core.css
/* Dropdown */

.power-dropmenu, .power-dropmenu.power-active > .power-dropmenu {
    display: none !important;
}

.power-hide {
    visibility: hidden !important;
}
@media screen and (max-width: 768px) {
    .power-dropmenu > .power-dropmenu.power-active {
        margin-left: 0 !important;
        position: relative;
    }
}

/* power menu-break query*/
    .pw-menu-break .power-dropmenu > .power-dropmenu.power-active {
        margin-left: 0 !important;
        position: relative;
    }
/* power menu-break query*/

/* Dropdown end */
/* Menu */
.power-menu.pw-horizontal > * {
    display: inline-block;
}
.power-menu.pw-vertical > .power-action, .power-menu.pw-vertical > .power-item, .power-menu.pw-vertical > .power-brand {
    display: block;
}
.power-menu.pw-vertical {
    display: inline-block;
}
.power-active > .power-item, .power-active > .power-action, .power-active > .power-brand {
    display: block;
}

.power-menu.pw-horizontal .power-toggle {
    display: none;
}
.power-dropmenu.pw-mirrored {
    text-align: right;
}
.power-dropmenu.power-active, .power-dropmenu.power-active > .power-dropmenu.power-active {
    display: block !important;
    white-space: nowrap;
    border-style: solid;
    border-width: 1px;
    position: absolute;
}

/* start power tree view */
.power-tree-view .power-tree-view {
    padding-left: 1em;
}
.power-tree-view, .power-tree-view .power-item, .power-tree-view .power-tree-view, .power-tree-view .power-list {
    display: block;
    cursor: pointer;
}
.power-tree-view .power-tree-view {
    display: none;
}
.power-tree-view .power-tree-view.power-active {
    display: block;;
}

/* end power tree view*/
@media screen and (max-width: 768px) {
    .power-menu.pw-horizontal.power-active .power-action,
    .power-menu.pw-horizontal.power-active .power-item {
        display: block;
        width: max-content;
    }

    .power-menu.pw-horizontal .power-action,
    .power-menu.pw-horizontal .power-item {
        display: none;
    }

    .power-menu.pw-horizontal {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }


    .power-menu.pw-horizontal.power-active {
        display: block;
        justify-content: initial;
    }

    .power-menu.pw-horizontal .power-toggle {
        display: inline-block;
        text-align: right;
    }

    .power-menu.pw-horizontal.power-active .power-toggle {
        display: none;
    }
}
/* power menu-break query*/
    .pw-menu-break .power-menu.pw-horizontal.power-active .power-action,
    .pw-menu-break .power-menu.pw-horizontal.power-active .power-item {
        display: block;
        width: max-content;
    }

    .pw-menu-break .power-menu.pw-horizontal .power-action,
    .pw-menu-break .power-menu.pw-horizontal .power-item {
        display: none;
    }

    .pw-menu-break .power-menu.pw-horizontal {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }


    .pw-menu-break .power-menu.pw-horizontal.power-active {
        display: block;
        justify-content: initial;
    }

    .pw-menu-break .power-menu.pw-horizontal .power-toggle {
        display: inline-block;
        text-align: right;
    }

    .pw-menu-break .power-menu.pw-horizontal.power-active .power-toggle {
        display: none;
    }
/* power menu-break query*/

.pw-menu-fixed {
    position: fixed;
}

.power-menu.pw-menu-fixed.pw-top {
    top: 0;
    left: 0;
}
.power-menu.pw-menu-fixed.pw-bottom {
    bottom: 0;
    left: 0;
    margin: 0;
}
.power-menu.pw-menu-fixed.pw-left {
    top: 0;
    left: 0;
    margin: 0;
    width: auto;
    height: 100vh;
}
.power-menu.pw-menu-fixed.pw-right {
    top: 0;
    right: 0;
    margin: 0;
    width: auto;
    height: 100vh;
}
.power-menu.pw-menu-float {
    width: auto;
}
.power-menu.pw-menu-float.pw-left {
    float: left;
}
.power-menu.pw-menu-float.pw-right {
    float: right;
}
/* Menu end*/

/* Dialog-Modal-Window start */
.pw-body-iframe iframe {
    margin-left: 5px;
    z-index: 1;
}
.pw-cover-iframe {
    position: absolute;
    top: 0;
    z-index: 1000;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.1);
}
.pw-active .pw-cover-iframe {
    display: none;
}
.pw-modal .pw-body, .pw-dialog .pw-body {
    position: relative;
    overflow: auto;
    max-height: 90vh;
}
.pw-backdrop {
    z-index: 1000;
}
.pw-backdrop {
    position: fixed;
}
.pw-backdrop {
    padding: 1em 0 0 0;
    text-align: center;
    width: 100%;
    height: 100%;
}
.pw-backdrop {
    top: 0;
    left: 0;
    background-color: rgb(0, 0, 0, 0.7);
}
.pw-dialog-container {
    top: 0;
    left: 0;
    padding-top: 20vh;
}
.pw-dialog {
    z-index: 1003;
}
.pw-order {
    z-index: 3000 !important;
}

.window-left-top {
    cursor: nwse-resize;
}
.window-left-botton {
    cursor: nesw-resize;
}
.window-width {
    cursor: ew-resize;
}
.window-height {
    cursor: ns-resize;
}
.pw-window  {
    position: fixed;
    top: 10px;
    left: 10px;
    padding: 5px;
    z-index: 1001;
    background-color: #000000;
    /*overflow: hidden;*/
}
.pw-window.pw-touchdevice {
    top: 0;
    left: 0;
}
.pw-window .pw-body {
    /*resize: both;*/
    overflow: auto;
}
.pw-window, .pw-window .pw-body {
    max-width: 95vw;
    max-height: 98vh;
    min-width: 250px;
    min-height: 250px;
    /*text-align: center;*/
}

.pw-window .pw-window .pw-title-bar, .pw-window .pw-body, .pw-window .pw-body-iframe, .pw-window iframe {
    min-width: 100%;
    max-width: 100%;
}
.pw-window.pw-touchdevice .pw-body {
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    max-width: 100vw;
    max-height: 100vh;
}

.pw-window .pw-title-bar {
    cursor: grabbing;
    text-align: center;
}
.pw-modal .pw-body, .pw-modal .pw-title-bar {
    margin: 0 auto;
    width: 80%;
    max-width: 95vw;
}
.pw-modal.pw-touchdevice .pw-body, .pw-modal.pw-touchdevice .pw-title-bar {
    width: 95%;
    max-width: 100vw;
}
.pw-dialog .pw-body, .pw-dialog .pw-title-bar {
    margin: 0 auto;
    width: 50em;
    max-width: 95vw;
}
.pw-modal .pw-body, .pw-modal .pw-title-bar, .pw-dialog .pw-body, .pw-dialog .pw-title-bar, .pw-window {
    box-shadow: 5px 5px 10px 0 rgb(0, 0, 0, 0.5);
}

body.modal-open {
    overflow: hidden;
}
/* dialog-Modal-Window end */

/* Start All dialogs */
.pw-title-bar {
    min-height: 3em;
    background-color: rgb(0, 0, 0, 1);
}
.pw-title-bar-label {
    margin-top: 1em;
    display: inline-block;
    color: #FFF;
    font-weight: bold;
    margin-right: -2rem; /* compensate the X close button */
}
.pw-container {
    margin: 1em;
}

/* End All dialogs */

/* buttons start*/
.pw-btn-default, .pw-btn-highlight, .pw-btn-danger, .pw-btn-primary, .pw-btn-warning, .pw-btn-secundary, .pw-btn-success, .pw-btn-basic {
    border: none;
    cursor: pointer;
}
.power-menu button.pw-btn-default, .power-menu button.pw-btn-highlight, .power-menu button.pw-btn-danger, .power-menu button.pw-btn-primary, .power-menu button.pw-btn-warning, .power-menu button.pw-btn-secundary, .power-menu button.pw-btn-success, .power-menu button.pw-btn-basic {
    margin-top: 0;
    vertical-align: middle;
}
.power-menu .power-action.pw-btn-default, .power-menu .power-action.pw-btn-highlight, .power-menu .power-action.pw-btn-danger, .power-menu .power-action.pw-btn-primary, .power-menu .power-action.pw-btn-warning, .power-menu .power-action.pw-btn-secundary, .power-menu .power-action.pw-btn-success, .power-menu .power-action.pw-btn-basic {
    margin-top: 0;
    vertical-align: middle;
}
.pw-btn-default span, .pw-btn-highlight span, .pw-btn-danger span, .pw-btn-primary span, .pw-btn-warning span, .pw-btn-secundary span,  .pw-btn-success span, .pw-btn-basic span, .power-accordion .power-action span {
    display: inline-block;
    vertical-align: middle;
}

.pw-bt-close {
    float: right;
    cursor: pointer;
}
/* buttons end*/

/* start spinner */
.pw-spinner-backdrop {
    position: fixed;
    top: 0;
    left: 0;
    text-align: center;
    width: 100%;
    height: 100%;
    z-index: 3000;
    background-color: rgb(0, 0, 0, 0.7);
}
.pw-spinner, p.pw-spinner-label {
    position: relative;
    top: 43vh;
}
.pw-spinner {
    margin: -115px auto;
    border: 16px solid #000;
    border-radius: 50%;
    border-top: 16px solid #f3f3f3;
    border-bottom: 16px solid #f3f3f3;
    width: 130px;
    height: 130px;
    -webkit-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
    z-index: 3001;
}

@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

p.pw-spinner-label {
    font-family: Verdana, Arial, "Courier New", "san-serif";
    margin-left: 0.2em;
    text-transform: uppercase;
    font-size: 1.3em;
    font-weight: bold;
    letter-spacing: 4px;
    overflow: hidden;
    background: linear-gradient(90deg, #000, #fff, #000);
    background-repeat: no-repeat;
    background-size: 80%;
    animation: animate 2s linear infinite;
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(255, 255, 255, 0);
    z-index: 3002;
}

@keyframes animate {
  100% {
    background-position: -500%;
  }
  100% {
    background-position: 500%;
  }
}
/* end spinner */

/* simple-form css start*/

.pw-simple-form.pw-vertical-form input:not([type="radio"]):not([type="checkbox"]):not([type="submit"]):not([type="reset"]):not([type="image"]),
.pw-simple-form.pw-vertical-form select,
.pw-simple-form.pw-vertical-form textarea {
    display: block;
}
.pw-simple-form .pw-field-container .pw-control-helper {
    display: none;
}

.pw-simple-form .pw-field-container.pw-has-error .pw-control-helper {
    display: block;
}

/* simple-form css end*/

